--- a/tex/graphics/3-curve-discrX.tex
+++ b/tex/graphics/3-curve-discrX.tex
@@ -1,158 +1,158 @@
-% Created by tikzDevice version 0.12.3.1 on 2021-12-06 10:56:44
+% Created by tikzDevice version 0.12.3.1 on 2021-12-15 14:08:26
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
-\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (216.81,101.18);
+\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (180.67, 86.72);
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (180.67, 86.72);
 \end{scope}
 \begin{scope}
-\path[clip] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[clip] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[fill=fillColor] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 43.49) --
-	(211.31, 43.49);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 40.64) --
+	(175.17, 40.64);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 63.18) --
-	(211.31, 63.18);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 55.95) --
+	(175.17, 55.95);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 82.88) --
-	(211.31, 82.88);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 71.27) --
+	(175.17, 71.27);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 51.04, 30.69) --
-	( 51.04, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 45.29, 30.69) --
+	( 45.29, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 94.35, 30.69) --
-	( 94.35, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 80.39, 30.69) --
+	( 80.39, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (137.67, 30.69) --
-	(137.67, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (115.50, 30.69) --
+	(115.50, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (180.99, 30.69) --
-	(180.99, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (150.60, 30.69) --
+	(150.60, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 33.64) --
-	(211.31, 33.64);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 32.98) --
+	(175.17, 32.98);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 53.33) --
-	(211.31, 53.33);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 48.30) --
+	(175.17, 48.30);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 73.03) --
-	(211.31, 73.03);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 63.61) --
+	(175.17, 63.61);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 92.72) --
-	(211.31, 92.72);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 78.93) --
+	(175.17, 78.93);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 30.69) --
-	( 29.38, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.74, 30.69) --
+	( 27.74, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.69, 30.69) --
-	( 72.69, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.84, 30.69) --
+	( 62.84, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (116.01, 30.69) --
-	(116.01, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.94, 30.69) --
+	( 97.94, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (159.33, 30.69) --
-	(159.33, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.05, 30.69) --
+	(133.05, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (202.65, 30.69) --
-	(202.65, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (168.15, 30.69) --
+	(168.15, 81.22);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] ( 29.38, 53.43) --
-	( 43.76, 63.66) --
-	( 60.04, 74.79) --
-	( 75.93, 80.71) --
-	( 86.10, 74.58) --
-	( 99.75, 64.77) --
-	(121.67, 48.90) --
-	(139.98, 61.42) --
-	(149.08, 66.02) --
-	(160.59, 69.63) --
-	(170.76, 63.51) --
-	(188.26, 51.32) --
-	(202.65, 42.07);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] ( 27.74, 48.37) --
+	( 39.39, 56.33) --
+	( 52.59, 64.98) --
+	( 65.46, 69.58) --
+	( 73.71, 64.82) --
+	( 84.77, 57.19) --
+	(102.53, 44.85) --
+	(117.37, 54.59) --
+	(124.74, 58.16) --
+	(134.07, 60.97) --
+	(142.31, 56.21) --
+	(156.50, 46.73) --
+	(168.15, 39.54);
 \definecolor{fillColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 29.38, 53.43) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 27.74, 48.37) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 43.76, 63.66) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 39.39, 56.33) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 60.04, 74.79) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 52.59, 64.98) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 75.93, 80.71) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 65.46, 69.58) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 86.10, 74.58) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 73.71, 64.82) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 99.75, 64.77) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 84.77, 57.19) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (121.67, 48.90) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (102.53, 44.85) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (139.98, 61.42) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (117.37, 54.59) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (149.08, 66.02) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (124.74, 58.16) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (160.59, 69.63) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (134.07, 60.97) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (170.76, 63.51) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (142.31, 56.21) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (188.26, 51.32) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (156.50, 46.73) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (202.65, 42.07) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (168.15, 39.54) circle (  1.43);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 27.94) --
-	( 29.38, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.74, 27.94) --
+	( 27.74, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.69, 27.94) --
-	( 72.69, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.84, 27.94) --
+	( 62.84, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (116.01, 27.94) --
-	(116.01, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.94, 27.94) --
+	( 97.94, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (159.33, 27.94) --
-	(159.33, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.05, 27.94) --
+	(133.05, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (202.65, 27.94) --
-	(202.65, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (168.15, 27.94) --
+	(168.15, 30.69);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 29.38, 19.68) {0.00};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 27.74, 19.68) {0.00};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 72.69, 19.68) {0.25};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 62.84, 19.68) {0.25};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (116.01, 19.68) {0.50};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 97.94, 19.68) {0.50};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (159.33, 19.68) {0.75};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (133.05, 19.68) {0.75};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (202.65, 19.68) {1.00};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (168.15, 19.68) {1.00};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (116.01,  7.64) {$t$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 97.94,  7.64) {$t$};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 63.18) {$\Re(\beta)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 55.95) {$\Re(\beta)$};
 \end{scope}
 \end{tikzpicture}
