--- a/tex/graphics/3-srv-discrX.tex
+++ b/tex/graphics/3-srv-discrX.tex
@@ -1,264 +1,251 @@
-% Created by tikzDevice version 0.12.3.1 on 2021-12-06 10:56:48
+% Created by tikzDevice version 0.12.3.1 on 2021-12-15 14:08:41
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
-\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (216.81,101.18);
+\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (180.67, 86.72);
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (180.67, 86.72);
 \end{scope}
 \begin{scope}
-\path[clip] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[clip] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[fill=fillColor] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 41.03) --
-	(211.31, 41.03);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 38.73) --
+	(175.17, 38.73);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 55.80) --
-	(211.31, 55.80);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 50.21) --
+	(175.17, 50.21);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 70.57) --
-	(211.31, 70.57);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 61.70) --
+	(175.17, 61.70);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 85.34) --
-	(211.31, 85.34);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 73.18) --
+	(175.17, 73.18);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 51.04, 30.69) --
-	( 51.04, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 45.29, 30.69) --
+	( 45.29, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 94.35, 30.69) --
-	( 94.35, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 80.39, 30.69) --
+	( 80.39, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (137.67, 30.69) --
-	(137.67, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (115.50, 30.69) --
+	(115.50, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (180.99, 30.69) --
-	(180.99, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (150.60, 30.69) --
+	(150.60, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 33.64) --
-	(211.31, 33.64);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 32.98) --
+	(175.17, 32.98);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 48.41) --
-	(211.31, 48.41);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 44.47) --
+	(175.17, 44.47);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 63.18) --
-	(211.31, 63.18);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 55.95) --
+	(175.17, 55.95);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 77.95) --
-	(211.31, 77.95);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 67.44) --
+	(175.17, 67.44);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 92.72) --
-	(211.31, 92.72);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 78.93) --
+	(175.17, 78.93);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 30.69) --
-	( 29.38, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.74, 30.69) --
+	( 27.74, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.69, 30.69) --
-	( 72.69, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.84, 30.69) --
+	( 62.84, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (116.01, 30.69) --
-	(116.01, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.94, 30.69) --
+	( 97.94, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (159.33, 30.69) --
-	(159.33, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.05, 30.69) --
+	(133.05, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (202.65, 30.69) --
-	(202.65, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (168.15, 30.69) --
+	(168.15, 81.22);
 \definecolor{drawColor}{RGB}{190,190,190}
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] ( 29.38, 86.33) --
-	( 31.11, 86.33) --
-	( 32.84, 86.33) --
-	( 34.58, 86.33) --
-	( 36.31, 86.33) --
-	( 38.04, 86.33) --
-	( 39.77, 86.33) --
-	( 41.51, 86.33) --
-	( 43.24, 86.33) --
-	( 44.97, 85.45) --
-	( 46.70, 85.45) --
-	( 48.44, 85.45) --
-	( 50.17, 85.45) --
-	( 51.90, 85.45) --
-	( 53.64, 85.45) --
-	( 55.37, 85.45) --
-	( 57.10, 85.45) --
-	( 58.83, 85.45) --
-	( 60.57, 75.29) --
-	( 62.30, 75.29) --
-	( 64.03, 75.29) --
-	( 65.76, 75.29) --
-	( 67.50, 75.29) --
-	( 69.23, 75.29) --
-	( 70.96, 75.29) --
-	( 72.69, 75.29) --
-	( 74.43, 75.29) --
-	( 76.16, 43.58) --
-	( 77.89, 43.58) --
-	( 79.63, 43.58) --
-	( 81.36, 43.58) --
-	( 83.09, 43.58) --
-	( 84.82, 43.58) --
-	( 86.56, 39.78) --
-	( 88.29, 39.78) --
-	( 90.02, 39.78) --
-	( 91.75, 39.78) --
-	( 93.49, 39.78) --
-	( 95.22, 39.78) --
-	( 96.95, 39.78) --
-	( 98.69, 39.78) --
-	(100.42, 39.61) --
-	(102.15, 39.61) --
-	(103.88, 39.61) --
-	(105.62, 39.61) --
-	(107.35, 39.61) --
-	(109.08, 39.61) --
-	(110.81, 39.61) --
-	(112.55, 39.61) --
-	(114.28, 39.61) --
-	(116.01, 39.61) --
-	(117.74, 39.61) --
-	(119.48, 39.61) --
-	(121.21, 39.61) --
-	(122.94, 85.45) --
-	(124.68, 85.45) --
-	(126.41, 85.45) --
-	(128.14, 85.45) --
-	(129.87, 85.45) --
-	(131.61, 85.45) --
-	(133.34, 85.45) --
-	(135.07, 85.45) --
-	(136.80, 85.45) --
-	(138.54, 85.45) --
-	(140.27, 79.61) --
-	(142.00, 79.61) --
-	(143.74, 79.61) --
-	(145.47, 79.61) --
-	(147.20, 79.61) --
-	(148.93, 79.61) --
-	(150.67, 73.41) --
-	(152.40, 73.41) --
-	(154.13, 73.41) --
-	(155.86, 73.41) --
-	(157.60, 73.41) --
-	(159.33, 73.41) --
-	(161.06, 43.58) --
-	(162.79, 43.58) --
-	(164.53, 43.58) --
-	(166.26, 43.58) --
-	(167.99, 43.58) --
-	(169.73, 43.58) --
-	(171.46, 40.53) --
-	(173.19, 40.53) --
-	(174.92, 40.53) --
-	(176.66, 40.53) --
-	(178.39, 40.53) --
-	(180.12, 40.53) --
-	(181.85, 40.53) --
-	(183.59, 40.53) --
-	(185.32, 40.53) --
-	(187.05, 40.53) --
-	(188.79, 42.24) --
-	(190.52, 42.24) --
-	(192.25, 42.24) --
-	(193.98, 42.24) --
-	(195.72, 42.24) --
-	(197.45, 42.24) --
-	(199.18, 42.24) --
-	(200.91, 42.24) --
-	(202.65, 42.24);
+\path[draw=drawColor,line width= 2.3pt,line join=round] ( 27.74, 73.95) --
+	( 29.14, 73.95) --
+	( 30.54, 73.95) --
+	( 31.95, 73.95) --
+	( 33.35, 73.95) --
+	( 34.76, 73.95) --
+	( 36.16, 73.95) --
+	( 37.56, 73.95) --
+	( 38.97, 73.95) --
+	( 40.37, 73.27) --
+	( 41.78, 73.27) --
+	( 43.18, 73.27) --
+	( 44.59, 73.27) --
+	( 45.99, 73.27) --
+	( 47.39, 73.27) --
+	( 48.80, 73.27) --
+	( 50.20, 73.27) --
+	( 51.61, 73.27) --
+	( 53.01, 65.37) --
+	( 54.41, 65.37) --
+	( 55.82, 65.37) --
+	( 57.22, 65.37) --
+	( 58.63, 65.37) --
+	( 60.03, 65.37) --
+	( 61.44, 65.37) --
+	( 62.84, 65.37) --
+	( 64.24, 65.37) --
+	( 65.65, 40.71) --
+	( 67.05, 40.71) --
+	( 68.46, 40.71) --
+	( 69.86, 40.71) --
+	( 71.27, 40.71) --
+	( 72.67, 40.71) --
+	( 74.07, 37.76) --
+	( 75.48, 37.76) --
+	( 76.88, 37.76) --
+	( 78.29, 37.76) --
+	( 79.69, 37.76) --
+	( 81.09, 37.76) --
+	( 82.50, 37.76) --
+	( 83.90, 37.76) --
+	( 85.31, 37.63) --
+	( 86.71, 37.63) --
+	( 88.12, 37.63) --
+	( 89.52, 37.63) --
+	( 90.92, 37.63) --
+	( 92.33, 37.63) --
+	( 93.73, 37.63) --
+	( 95.14, 37.63) --
+	( 96.54, 37.63) --
+	( 97.94, 37.63) --
+	( 99.35, 37.63) --
+	(100.75, 37.63) --
+	(102.16, 37.63) --
+	(103.56, 73.27) --
+	(104.97, 73.27) --
+	(106.37, 73.27) --
+	(107.77, 73.27) --
+	(109.18, 73.27) --
+	(110.58, 73.27) --
+	(111.99, 73.27) --
+	(113.39, 73.27) --
+	(114.79, 73.27) --
+	(116.20, 73.27) --
+	(117.60, 68.73) --
+	(119.01, 68.73) --
+	(120.41, 68.73) --
+	(121.82, 68.73) --
+	(123.22, 68.73) --
+	(124.62, 68.73) --
+	(126.03, 63.91) --
+	(127.43, 63.91) --
+	(128.84, 63.91) --
+	(130.24, 63.91) --
+	(131.65, 63.91) --
+	(133.05, 63.91) --
+	(134.45, 40.71) --
+	(135.86, 40.71) --
+	(137.26, 40.71) --
+	(138.67, 40.71) --
+	(140.07, 40.71) --
+	(141.47, 40.71) --
+	(142.88, 38.34) --
+	(144.28, 38.34) --
+	(145.69, 38.34) --
+	(147.09, 38.34) --
+	(148.50, 38.34) --
+	(149.90, 38.34) --
+	(151.30, 38.34) --
+	(152.71, 38.34) --
+	(154.11, 38.34) --
+	(155.52, 38.34) --
+	(156.92, 39.67) --
+	(158.32, 39.67) --
+	(159.73, 39.67) --
+	(161.13, 39.67) --
+	(162.54, 39.67) --
+	(163.94, 39.67) --
+	(165.35, 39.67) --
+	(166.75, 39.67) --
+	(168.15, 39.67);
 \definecolor{drawColor}{RGB}{0,0,0}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] ( 36.57, 86.33) --
-	( 51.90, 85.45) --
-	( 67.99, 75.29) --
-	( 81.02, 43.58) --
-	( 92.93, 39.78) --
-	(110.71, 39.61) --
-	(130.82, 85.45) --
-	(144.53, 79.61) --
-	(154.83, 73.41) --
-	(165.67, 43.58) --
-	(179.51, 40.53) --
-	(195.45, 42.24);
 \definecolor{fillColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 36.57, 86.33) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 33.56, 73.95) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 51.90, 85.45) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 45.99, 73.27) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 67.99, 75.29) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 59.02, 65.37) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 81.02, 43.58) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 69.58, 40.71) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 92.93, 39.78) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 79.24, 37.76) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (110.71, 39.61) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 93.65, 37.63) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (130.82, 85.45) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (109.95, 73.27) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (144.53, 79.61) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (121.05, 68.73) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (154.83, 73.41) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (129.40, 63.91) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (165.67, 43.58) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (138.19, 40.71) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (179.51, 40.53) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (149.40, 38.34) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (195.45, 42.24) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (162.32, 39.67) circle (  1.43);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 27.94) --
-	( 29.38, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.74, 27.94) --
+	( 27.74, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.69, 27.94) --
-	( 72.69, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.84, 27.94) --
+	( 62.84, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (116.01, 27.94) --
-	(116.01, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.94, 27.94) --
+	( 97.94, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (159.33, 27.94) --
-	(159.33, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.05, 27.94) --
+	(133.05, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (202.65, 27.94) --
-	(202.65, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (168.15, 27.94) --
+	(168.15, 30.69);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 29.38, 19.68) {0.00};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 27.74, 19.68) {0.00};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 72.69, 19.68) {0.25};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 62.84, 19.68) {0.25};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (116.01, 19.68) {0.50};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 97.94, 19.68) {0.50};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (159.33, 19.68) {0.75};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (133.05, 19.68) {0.75};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (202.65, 19.68) {1.00};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (168.15, 19.68) {1.00};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (116.01,  7.64) {$t$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 97.94,  7.64) {$t$};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 63.18) {$\Re(q)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 55.95) {$\Re(q)$};
 \end{scope}
 \end{tikzpicture}
