--- a/tex/sections/3-estimation.tex
+++ b/tex/sections/3-estimation.tex
@@ -1,66 +1,30 @@
 \label{sec:3}
-So far, we have considered estimation of the elastic full Procrustes mean in a setting, where each curve $\beta_i$ is assumed fully observed.
+So far, we have considered estimation of the elastic full Procrustes mean in a setting where each curve $\beta_i$ is assumed fully observed.
 This is usually not the case in practice, as each observation $\beta_i$ may itself only be observed at a finite number of discrete points $\beta_i(t_{i1}), \dots, \beta_i(t_{in_i})$.
 Additionally, the number of observed points per curve $n_i$ might be quite small and the points do not need to follow a common sampling scheme across all curves, a setting which is respectively known as \emph{sparse} and \emph{irregular}.
-
 Following the steps laid out in \cref{algo:mean}, this chapter proposes a mean estimation strategy for dealing with sparse and irregular observations.
 In a first step, the construction of SRV and warped SRV curves from discrete (and possibly sparse) observations will be shown in \cref{sec:3-discrete}.
 \cref{sec:3-cov} discusses efficient estimation of the complex covariance surface $C^{(k)}(s,t)$ from sparse observations.
-In \cref{sec:3-mean}, calculation of the leading eigenfunction $\hat u^{(k)}_1$ of $C^{(k)}(s,t)$ in a fixed basis will be shown.
-\cref{sec:3-pfits} deals with the estimation of the optimal rotation and scaling alignment $\omega_i^{(k)} = \langle \widetilde q_i^{(k)}, \hat\mu^{(k)}_q \rangle$, where $\widetilde q_i^{(k)}$ is a sparsely observed normalised SRV curve, while $\hat\mu^{(k)}_q$ is a smooth SRV mean function.
+In \cref{sec:3-mean}, calculation of the leading eigenfunction $\hat u^{(k)}_1$ of $C^{(k)}(s,t)$ in a fixed basis will be derived.
+\cref{sec:3-pfits} deals with the estimation of the optimal rotation and scaling alignment $\omega_i^{(k)} = \langle \widetilde q_i^{(k)}, \hat\mu^{(k)}_q \rangle$, where $\widetilde q_i^{(k)}$ is a sparsely observed normalised SRV curve and $\hat\mu^{(k)}_q$ is a smooth SRV mean function.
 Note that the final warping alignment step in \cref{algo:mean} is solved by using methods for warping alignment of sparse and irregular curves provided in \cite{Steyer2021}.
 
 
 \section{Discrete Treatment of SRV Curves}
 \label{sec:3-discrete}
 As a first step, we need to calculate the \emph{normalised SRV curves} $\widetilde q_i = \frac{q}{\norm{q}}$ from sparse observations.
-As the SRV curve of $\beta \in \mathcal{AC}([0,1],\,\mathbb{C})$ is defined as $q = \dot\beta / \sqrt{\norm{\dot\beta}}$ (for $\dot\beta \neq 0$), we have to be able to calculate a derivative of $\beta$.
+As the SRV curve of $\beta \in \mathcal{AC}([0,1],\,\mathbb{C})$ is defined as $q = \dot\beta / \sqrt{\abs{\dot\beta}}$ (for $\dot\beta \neq 0$), we have to be able to calculate a derivative of $\beta$.
 However, as we never observe the whole function $\beta$ but only a discrete set of points $\beta(t_1),\dots,\beta(t_n)$, as seen in \cref{fig:3-disc}, we cannot simply calculate a point-wise derivative.
-Following \cite{Steyer2021}, we may treat a discretely observed curve $\beta$ as piece-wise linear between its observed corners $\beta(t_1),\dots,\beta(t_n)$, which allows us to calculate a piece-wise constant derivative on the intervals $[t_j,\,t_{j+1}]$ for $j=1,\dots,n-1$.
-As usually only the image $\beta(t_1),\dots,\beta(t_n)$ but not the parametrisation $t_1,\dots,t_n$ is observed, it is first necessary to construct an initial parameterisation.
-A common choice is an \emph{arc-length-parametrisation}, where we set $t_j = l_j/l$ with $l_j = \sum_{k=1}^{j-1} \abs{\beta(t_{k+1}) - \beta(t_k)}$ the polygon-length up to point $j$ for $j \leq 2$ with $l_1 = 0$ and $l= l_n$.
-
 \begin{figure}
   \centering
   \begin{subfigure}{.48\textwidth}
     \centering
     \inputTikz{3-curve-discr}
+    \caption{Sparsely observed original curve.}
   \end{subfigure}\hfill%
   \begin{subfigure}{.48\textwidth}
     \centering
-    \begin{subfigure}{\textwidth}
-      \centering
-      \inputTikz{3-curve-discrX}
-    \end{subfigure}
-    \begin{subfigure}{\textwidth}
-      \centering
-      \inputTikz{3-curve-discrY}
-    \end{subfigure}
-  \end{subfigure}
-  \caption{Example of a sparse and irregularly observed digit \enquote*{3}. Data: \texttt{digits3.dat}.}
-  \label{fig:3-disc}
-\end{figure}
-
-Consider the piece-wise-constant derivative $\Delta \beta \big\rvert_{[t_j, t_{j+1}]} = \frac{\beta(t_{j+1}) - \beta(t_{j})}{t_{j+1} - t_j}$, which assumes that $\beta$ is linear between its observed corners. 
-The corresponding SRV curve $q$ can then similarly be treated as piece-wise constant $q\big\rvert_{[t_{j},t_{j+1}]} = q_j$ with 
-\begin{equation}
-  q_j = \Delta \beta \big\rvert_{[t_j, t_{j+1}]} \Big/ \sqrt{\norm{\Delta \beta \big\rvert_{[t_j, t_{j+1}]}}} = \frac{\beta(t_{j+1}) - \beta(t_j)}{\sqrt{t_{j+1} - t_j} \cdot \sqrt{\norm{\beta(t_{j+1}) - \beta(t_j)}}}
-\end{equation}
-the constant \emph{square-root-velocity} of $\beta$ between its corners $\beta(t_j)$ and $\beta(t_{j+1})$.
-As shown in \cite[][Fig.\ 3]{Steyer2021}, treating the SRV curves as piece-wise-constant functions can lead to over-fitting, where the mean shape is estimated too polygon-like.
-As an alternative they propose to approximate the derivative, by assuming that it attains the value of the piecwise-constant derivative $\Delta \beta \big\rvert_{[t_j,t_{j+1}]}$ at the centre $s_j = \frac{t_{j+1} - t_j}{2}$ of the interval $[t_j, t_{j+1}]$.
-Here, this will be used for approximating observations $q(s_j) \approx q_j$ of the SRV curve $q$ in the covariance estimation step.
-See \cref{fig:3-disc-srv} for a visualisation of both approaches.
-Finally, we can approximate the normalised SRV curve $\widetilde q = q / \norm{q}$ using the polygon-length $l$ of $\beta$ by $\widetilde q_j = q_j \big/ \sqrt{l}$ (see \cref{eq:2-norm}).
-\begin{figure}
-  \centering
-  \begin{subfigure}{.48\textwidth}
-    \centering
-    \inputTikz{3-srv-discr}
-  \end{subfigure}\hfill%
-  \begin{subfigure}{.48\textwidth}
-    \centering
-    \begin{subfigure}{\textwidth}
+    \begin{subfigure}[t]{\textwidth}
       \centering
       \inputTikz{3-srv-discrX}
     \end{subfigure}
@@ -68,12 +32,29 @@ Finally, we can approximate the normalised SRV curve $\widetilde q = q / \norm{q
       \centering
       \inputTikz{3-srv-discrY}
     \end{subfigure}
+    \caption{SRV coordinate functions. Discretely approximated (black points) and piece-wise constant (grey).}
   \end{subfigure}
-  \caption{Discretely approximated (black, dashed) and piece-wise constant (gray) SRV curve of the digit \enquote*{3} in \cref{fig:3-disc}. Data: \texttt{digits3.dat}.}
+  \caption{Example of a sparse and irregularly observed digit \enquote*{3}. Data: \texttt{digits3.dat}.}
   \label{fig:3-disc-srv}
 \end{figure}
+Following \cite{Steyer2021}, we may treat a discretely observed curve $\beta$ as piece-wise linear between its observed corners $\beta(t_1),\dots,\beta(t_n)$.
+This allows us to calculate a piece-wise constant derivative on the intervals $[t_j,\,t_{j+1}]$ for $j=1,\dots,n-1$.
+As usually only the image $\beta(t_1),\dots,\beta(t_n)$ but not the parameterisation $t_1,\dots,t_n$ is observed, it is first necessary to construct an initial parameterisation.
+A common choice is an \emph{arc-length parameterisation}, where we set $t_j = l_j/l$ with $l_j = \sum_{k=1}^{j-1} \abs{\beta(t_{k+1}) - \beta(t_k)}$ the polygon-length up to point $j$ for $j \leq 2$ with $l_1 = 0$ and $l= l_n$.
+
+Consider the piece-wise constant derivative $\Delta \beta \big\rvert_{[t_j, t_{j+1}]} = \frac{\beta(t_{j+1}) - \beta(t_{j})}{t_{j+1} - t_j}$, which assumes that $\beta$ is linear between its observed corners. 
+The corresponding SRV curve $q$ can then similarly be treated as piece-wise constant $q\big\rvert_{[t_{j},t_{j+1}]} = q_j$ with 
+\begin{equation}
+  q_j = \Delta \beta \big\rvert_{[t_j, t_{j+1}]} \Big/ \sqrt{\abs{\Delta \beta \big\rvert_{[t_j, t_{j+1}]}}} = \frac{\beta(t_{j+1}) - \beta(t_j)}{\sqrt{t_{j+1} - t_j} \cdot \sqrt{\abs{\beta(t_{j+1}) - \beta(t_j)}}}
+\end{equation}
+the constant \emph{square-root-velocity} of $\beta$ between its corners $\beta(t_j)$ and $\beta(t_{j+1})$.
+As shown in \cite[][Fig.\ 3]{Steyer2021}, treating the SRV curves as piece-wise-constant functions can lead to over-fitting, where the mean shape is estimated too polygon-like.
+As an alternative they propose to approximate the derivative, by assuming that it attains the value of the piecwise-constant derivative $\Delta \beta \big\rvert_{[t_j,t_{j+1}]}$ at the centre $s_j = \frac{t_{j+1} - t_j}{2}$ of the interval $[t_j, t_{j+1}]$.
+Here, this will be used for approximating observations $q(s_j) \approx q_j$ of the SRV curve $q$ in the covariance estimation step.
+See \cref{fig:3-disc-srv} for a visualisation of both approaches.
+Finally, we can approximate the normalised SRV curve $\widetilde q = q / \norm{q}$ using the polygon-length $l$ of $\beta$ by $\widetilde q_j = q_j \big/ \sqrt{l}$ (see \cref{eq:2-norm}).
 When considering the warped normalised SRV curve $(q \circ \gamma ) \sqrt{\dot\gamma}$, the warped discrete derivative is given by $\Delta (\beta \circ \gamma) \big\rvert_{[\gamma^{-1}(t_j), \gamma^{-1}(t_{j+1})]} = \frac{\beta(t_{j+1}) - \beta(t_{j})}{\gamma^{-1}(t_{j+1}) - \gamma^{-1}(t_j)}$.
-The corresponding warped SRV curve is then given by $(q \circ \gamma) \sqrt{\dot\gamma} \big\rvert_{[\gamma^{-1}(t_j), \gamma^{-1}(t_{j+1})]} = \frac{1}{\sqrt{\gamma^{-1}(t_{j+1}) - \gamma^{-1}(t_j)}} \cdot \frac{\beta(t_{j+1}) - \beta(t_j)}{\sqrt{\norm{\beta(t_{j+1}) - \beta(t_j)}}}$ \parencite[see][]{Steyer2021}.
+The corresponding warped SRV curve is then given by $(q \circ \gamma) \sqrt{\dot\gamma} \big\rvert_{[\gamma^{-1}(t_j), \gamma^{-1}(t_{j+1})]} = \frac{1}{\sqrt{\gamma^{-1}(t_{j+1}) - \gamma^{-1}(t_j)}} \cdot \frac{\beta(t_{j+1}) - \beta(t_j)}{\sqrt{\abs{\beta(t_{j+1}) - \beta(t_j)}}}$ \parencite[see][]{Steyer2021}.
 Note that this does not change the normalisation as re-parameterisation is norm-preserving on SRV level.
 
 
@@ -105,11 +86,11 @@ The coefficient matrices in the specified basis are given by $\Xi_{\Re/\Im}^{(k)
 
 \section{Estimation of the Elastic Full Procrustes Mean in a Fixed Basis}
 \label{sec:3-mean}
-Our goal is to estimate a smooth mean function, which might be constructed with the same uni-variate basis $b(s)$ used in the tensor product basis of the covariance surface, so that the mean is given by $\mu_q(s) = b(s)^\top \theta$.
-We can choose an appropriate basis $b(s)$ by considering which, e.g., smoothness properties we want the estimated mean to have.
+Our goal is to estimate a smooth mean function, which might be constructed with the same uni-variate basis $b(s)$ as used in the tensor product basis of the covariance surface, so that the mean is given by $\mu_q(s) = b(s)^\top \theta$.
+We can choose an appropriate basis $b(s)$ by considering which smoothness properties we want the estimated mean to have.
 In this thesis we will use penalised B-spline basis functions (P-splines), which are piece-wise polynomials of degree $l$, fused at $m$ knots $\left\{\kappa_j\right\}_{j=1,\dots,m}$, where the $p$-th order differences between coefficients of neighbouring splines are penalised in the covariance estimation \parencite[see][Chap.~8.1]{FahrmeierEtAl2013}.
-It should be noted that by using a penalty, the number and location of knots do not have an influence on the estimated function when their number is high enough and they are evenly distributed.
-Furthermore, because of results relating to the identifiable of spline SRV curves modulo warping and translation, only piece-wise linear ($l = 1$) and piece-wise constant ($l = 0$) B-splines will be considered in the estimation \parencite[see][]{Steyer2021}.
+It should be noted that by using a penalty the number and location of knots do not have an influence on the estimated function when their number is high enough and they are evenly distributed.
+Furthermore, because of results relating to the identifiable of spline curves modulo warping on original curve level, only piece-wise linear ($l = 1$) and piece-wise constant ($l = 0$) B-splines will be considered in the mean estimation on SRV curve level \parencite[see][]{Steyer2021}.
 See \cref{fig:3-cov} for examples of a covariance surface estimated using piece-wise constant and piece-wise linear P-splines.
 \begin{figure}[t]
   \centering
@@ -136,9 +117,8 @@ See \cref{fig:3-cov} for examples of a covariance surface estimated using piece-
   \caption{Complex covariance surface on SRV curve level. Estimated using 13 equidistant knots, a 2nd order penalty and piece-wise constant (top) or piece-wise linear (bottom) B-splines. Data: \texttt{digits3.dat}}
   \label{fig:3-cov}
 \end{figure}
-This still provides the flexibility of estimating either polygonal or smooth means, as the mean function on original curve level is calculated by integration (see \cref{fig:3-mean}). 
 
-To calculate the elastic full Procrustes Mean, a functional eigenvalue problem on the estimated covariance surface $\hat{C}(s,t) = b(s)^\top \hat\Xi b(t)$ had to be solved (omitting \enquote*{$\cdot^{(k)}$} in this section).
+To calculate the elastic full Procrustes Mean, a functional eigenvalue problem on the estimated covariance surface $\hat{C}(s,t) = b(s)^\top \hat\Xi b(t)$ has to be solved (omitting \enquote*{$\cdot^{(k)}$} in this section).
 Remember that the elastic full Procrustes mean (for fixed warping) is estimated by the solution to the optimisation problem
 \begin{equation}
 \hat\mu_q = \, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
@@ -154,7 +134,8 @@ Then, estimating the mean $\hat \mu_q (s) = b(s)^\top \theta$ reduces to estimat
     \theta^H G \hat\Xi G \theta \label{eq:3-target}
 \end{align}
 where $(\cdot)^H = \overline{(\cdot)}^\top$ denotes the conjugate transpose and $G$ is the $K \times K$ Gram matrix with entries given by the basis products $g_{ij} = \langle b_i, b_j \rangle$.
-For an orthonormal basis the Gram matrix is an identity matrix as $\langle b_i, b_j \rangle = \delta_{ij}$, however, this is not the case for many basis representations such as, e.g.,the B-spline basis.
+For an orthonormal basis the Gram matrix is an identity matrix as $\langle b_i, b_j \rangle = \delta_{ij}$.
+However, this is not the case for many basis representations such as the B-spline basis.
 In thesis the \texttt{R} package \texttt{orthogonalsplinebasis} \parencite{orthogonalsplinebasis} is used to calculate Gram matrices for B-splines analytically, using the methods laid out in \cite{Redd2012}.
 
 Having reduced the functional eigenvalue problem to a multivariate eigenvalue problem over the covariance coefficient matrix, we may solve it using Lagrange optimisation with the following Lagrangian:
@@ -203,8 +184,8 @@ which is an eigenvalue problem on the product of the complex coefficient matrix 
 Note that this mirrors the result by \cite{ReissXu2020} for FPCA on real-valued tensor product spline coefficient matrices.
 Multiplying by $\theta^H G$ from the left and using $\theta^H G \theta = 1$ yields $\lambda = \theta^H G \hat\Xi G \theta$, i.e.\ the eigenvalues $\lambda$ correspond to the target function to maximise (see \cref{eq:3-target}).
 It follows that the estimate for the coefficient vector of the elastic full Procrustes mean $\hat\theta$ is given by the eigenvector of the leading eigenvalue of $\hat\Xi G$ or likewise of $\hat\Xi^{(k)} G$, when taking into account the warping alignment in step $k$ of \cref{algo:mean}.
-
-\begin{figure}[t]
+A smooth elastic full Procrustes mean is shown in \cref{fig:3-mean}, where the mean was estimated on SRV level using linear B-splines.
+\begin{figure}
   \centering
   \begin{subfigure}{\textwidth}
     \begin{subfigure}{.48\textwidth}
@@ -252,11 +233,11 @@ It follows that the estimate for the coefficient vector of the elastic full Proc
 
 \section{Numerical Integration of the Warping-Aligned Procrustes Fits}
 \label{sec:3-pfits}
-Given an estimated mean function $\hat\mu_q^{(k)} = b(s)^\top\hat\theta^{(k)}$, we need to calculate the Procrustes alignment $\omega_i^{(k)} = \langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle$, $i = 1,\dots,N$, of each curve onto the current mean, before we can update the warping alignment (see \cref{algo:mean}).
-In the sparse and irregular setting, calculating a scalar product such as $\langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle$ can be a challenge, as we have to evaluate $\widetilde q_i^{(k)}(t)$ at every $t \in [0,1]$.
+Given an estimated mean function $\hat\mu_q^{(k)} = b(s)^\top\hat\theta^{(k)}$, we need to calculate the Procrustes alignment $\omega_i^{(k)} = \langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle$ for $i = 1,\dots,N$ of each curve onto the current mean, before we can update the warping alignment (see \cref{algo:mean}).
+In the sparse and irregular setting, calculating a scalar product such as $\langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle$ can be a challenge, as we have to evaluate $\widetilde q_i^{(k)}(t)$ at every $t \in [0,1]$:
 \begin{equation}
 \langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle =
-  \int_0^1 \langle \widetilde q_i^{(k)}(t), \hat\mu_q^{(k)}(t) \rangle \dt
+  \int_0^1 \langle \widetilde q_i^{(k)}(t), \hat\mu_q^{(k)}(t) \rangle \dt\,.
 \end{equation}
 Following \cite{Steyer2021} and as discussed in \cref{sec:3-discrete}, this may be approximated by treating $\widetilde q_i^{(k)}$ as piece-wise constant between the warping-aligned corners of the original curve $\beta_i$, with the normalised and warping aligned values given by
 \begin{equation}
@@ -275,7 +256,7 @@ Given a fully observed smooth mean function $\hat\mu_q^{(k)}$ we can then calcul
   \sum_{j=0}^{m_i-1} \int_{\left(\gamma_i^{(k)}\right)^{-1}(t_{ij})}^{\left(\gamma_i^{(k)}\right)^{-1}(t_{ij+1})} \langle \widetilde q_{ij}^{(k)},\, \hat\mu_q^{(k)} (t) \rangle \dt \,.
 \end{equation}
 An alternative approach is discussed in \cref{app:a-smooth}.
-There, instead of treating the SRV curves as piece-wise-constant, they are smoothed in the mean basis $\widetilde q^{(k)} \approx b(s)^\top \hat\theta_i^{(k)}$, where the coefficient vector $\hat\theta_i^{(k)}$ is estimated in way that penalises deviations from the mean covariance-structure.
+There, instead of treating the SRV curves as piece-wise-constant, they are smoothed in the mean basis $\widetilde q^{(k)} \approx b(s)^\top \hat\theta_i^{(k)}$, where the coefficient vector $\hat\theta_i^{(k)}$ is estimated in a way that penalises deviations from the mean covariance-structure.
 The scalar product is then given by $\langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle \approx (\hat\theta_i^{(k)})^H G \hat\theta^{(k)}$.
-While this method succeeds in estimating very natural looking smooth SRV curves (see \cref{fig:a-smooth}), their integral is not guaranteed to go through the observed points on data curve level.
+While this method succeeds in estimating very natural looking smooth SRV curves, their integral is not guaranteed to go through the observed points on data curve level.
 Because of these and other theoretical concerns this approach did not end up getting used in this thesis.
