--- a/tex/sections/c-declaration.tex
+++ b/tex/sections/c-declaration.tex
@@ -3,4 +3,4 @@ All sources that I have reproduced in either an unaltered or modified form, have
 I understand that violations of these principles will result in proceedings regarding deception or attempted deception.
 \vspace{2cm}\\
 \textsc{Manuel Pfeuffer}\\
-Berlin, \today
+Berlin, {\AdvanceDate[1]\today}
