--- a/tex/graphics/2-srvY.tex
+++ b/tex/graphics/2-srvY.tex
@@ -1,225 +1,225 @@
-% Created by tikzDevice version 0.12.3.1 on 2021-12-06 10:55:34
+% Created by tikzDevice version 0.12.3.1 on 2021-12-15 13:57:49
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
-\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (216.81,101.18);
+\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (180.67, 86.72);
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (180.67, 86.72);
 \end{scope}
 \begin{scope}
-\path[clip] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[clip] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[fill=fillColor] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 41.03) --
-	(211.31, 41.03);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 38.73) --
+	(175.17, 38.73);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 55.80) --
-	(211.31, 55.80);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 50.21) --
+	(175.17, 50.21);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 70.57) --
-	(211.31, 70.57);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 61.70) --
+	(175.17, 61.70);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 85.34) --
-	(211.31, 85.34);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 73.18) --
+	(175.17, 73.18);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 51.04, 30.69) --
-	( 51.04, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 45.29, 30.69) --
+	( 45.29, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 94.35, 30.69) --
-	( 94.35, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 80.39, 30.69) --
+	( 80.39, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (137.67, 30.69) --
-	(137.67, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (115.50, 30.69) --
+	(115.50, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (180.99, 30.69) --
-	(180.99, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (150.60, 30.69) --
+	(150.60, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 33.64) --
-	(211.31, 33.64);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 32.98) --
+	(175.17, 32.98);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 48.41) --
-	(211.31, 48.41);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 44.47) --
+	(175.17, 44.47);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 63.18) --
-	(211.31, 63.18);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 55.95) --
+	(175.17, 55.95);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 77.95) --
-	(211.31, 77.95);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 67.44) --
+	(175.17, 67.44);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 92.72) --
-	(211.31, 92.72);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 78.93) --
+	(175.17, 78.93);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 30.69) --
-	( 29.38, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.74, 30.69) --
+	( 27.74, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.69, 30.69) --
-	( 72.69, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.84, 30.69) --
+	( 62.84, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (116.01, 30.69) --
-	(116.01, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.94, 30.69) --
+	( 97.94, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (159.33, 30.69) --
-	(159.33, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.05, 30.69) --
+	(133.05, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (202.65, 30.69) --
-	(202.65, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (168.15, 30.69) --
+	(168.15, 81.22);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 1.1pt,line join=round] ( 29.38, 60.61) --
-	( 31.09, 61.52) --
-	( 32.81, 62.42) --
-	( 34.52, 63.32) --
-	( 36.24, 64.22) --
-	( 37.96, 65.13) --
-	( 39.67, 66.03) --
-	( 41.39, 66.93) --
-	( 43.10, 67.83) --
-	( 44.82, 68.86) --
-	( 46.53, 69.95) --
-	( 48.25, 71.05) --
-	( 49.96, 72.14) --
-	( 51.68, 73.23) --
-	( 53.40, 74.32) --
-	( 55.11, 75.41) --
-	( 56.83, 76.51) --
-	( 58.54, 77.78) --
-	( 60.26, 79.42) --
-	( 61.97, 81.07) --
-	( 63.69, 82.71) --
-	( 65.40, 84.35) --
-	( 67.12, 85.99) --
-	( 68.84, 87.63) --
-	( 70.55, 89.28) --
-	( 72.27, 90.92) --
-	( 73.98, 89.83) --
-	( 75.70, 88.75) --
-	( 77.41, 87.66) --
-	( 79.13, 86.58) --
-	( 80.84, 85.49) --
-	( 82.56, 84.40) --
-	( 84.27, 83.32) --
-	( 85.99, 82.23) --
-	( 87.71, 80.60) --
-	( 89.42, 78.70) --
-	( 91.14, 76.80) --
-	( 92.85, 74.90) --
-	( 94.57, 73.00) --
-	( 96.28, 71.10) --
-	( 98.00, 69.20) --
-	( 99.71, 67.30) --
-	(101.43, 65.82) --
-	(103.15, 65.18) --
-	(104.86, 64.54) --
-	(106.58, 63.91) --
-	(108.29, 63.27) --
-	(110.01, 62.64) --
-	(111.72, 62.00) --
-	(113.44, 61.36) --
-	(115.15, 60.73) --
-	(116.87, 61.69) --
-	(118.59, 62.65) --
-	(120.30, 63.62) --
-	(122.02, 64.58) --
-	(123.73, 65.54) --
-	(125.45, 66.51) --
-	(127.16, 67.47) --
-	(128.88, 68.43) --
-	(130.59, 69.90) --
-	(132.31, 71.63) --
-	(134.03, 73.35) --
-	(135.74, 75.07) --
-	(137.46, 76.80) --
-	(139.17, 78.52) --
-	(140.89, 80.25) --
-	(142.60, 81.97) --
-	(144.32, 83.38) --
-	(146.03, 84.17) --
-	(147.75, 84.95) --
-	(149.47, 85.74) --
-	(151.18, 86.52) --
-	(152.90, 87.30) --
-	(154.61, 88.09) --
-	(156.33, 88.87) --
-	(158.04, 89.66) --
-	(159.76, 87.17) --
-	(161.47, 84.68) --
-	(163.19, 82.19) --
-	(164.90, 79.71) --
-	(166.62, 77.22) --
-	(168.34, 74.73) --
-	(170.05, 72.24) --
-	(171.77, 69.76) --
-	(173.48, 67.70) --
-	(175.20, 65.85) --
-	(176.91, 64.01) --
-	(178.63, 62.16) --
-	(180.34, 60.32) --
-	(182.06, 58.47) --
-	(183.78, 56.63) --
-	(185.49, 54.78) --
-	(187.21, 53.36) --
-	(188.92, 52.79) --
-	(190.64, 52.21) --
-	(192.35, 51.64) --
-	(194.07, 51.06) --
-	(195.78, 50.49) --
-	(197.50, 49.91) --
-	(199.22, 49.34) --
-	(200.93, 63.18);
+\path[draw=drawColor,line width= 1.1pt,line join=round] ( 27.74, 53.96) --
+	( 29.13, 54.66) --
+	( 30.52, 55.36) --
+	( 31.91, 56.06) --
+	( 33.30, 56.76) --
+	( 34.69, 57.47) --
+	( 36.08, 58.17) --
+	( 37.47, 58.87) --
+	( 38.86, 59.57) --
+	( 40.25, 60.37) --
+	( 41.64, 61.22) --
+	( 43.03, 62.07) --
+	( 44.42, 62.92) --
+	( 45.81, 63.77) --
+	( 47.20, 64.62) --
+	( 48.59, 65.47) --
+	( 49.98, 66.32) --
+	( 51.37, 67.31) --
+	( 52.76, 68.58) --
+	( 54.15, 69.86) --
+	( 55.54, 71.14) --
+	( 56.93, 72.41) --
+	( 58.32, 73.69) --
+	( 59.71, 74.97) --
+	( 61.10, 76.25) --
+	( 62.49, 77.52) --
+	( 63.88, 76.68) --
+	( 65.27, 75.83) --
+	( 66.66, 74.99) --
+	( 68.05, 74.15) --
+	( 69.44, 73.30) --
+	( 70.83, 72.46) --
+	( 72.22, 71.61) --
+	( 73.61, 70.77) --
+	( 75.00, 69.50) --
+	( 76.40, 68.02) --
+	( 77.79, 66.55) --
+	( 79.18, 65.07) --
+	( 80.57, 63.59) --
+	( 81.96, 62.11) --
+	( 83.35, 60.63) --
+	( 84.74, 59.15) --
+	( 86.13, 58.00) --
+	( 87.52, 57.51) --
+	( 88.91, 57.01) --
+	( 90.30, 56.52) --
+	( 91.69, 56.03) --
+	( 93.08, 55.53) --
+	( 94.47, 55.04) --
+	( 95.86, 54.54) --
+	( 97.25, 54.05) --
+	( 98.64, 54.80) --
+	(100.03, 55.54) --
+	(101.42, 56.29) --
+	(102.81, 57.04) --
+	(104.20, 57.79) --
+	(105.59, 58.54) --
+	(106.98, 59.29) --
+	(108.37, 60.04) --
+	(109.76, 61.18) --
+	(111.15, 62.52) --
+	(112.54, 63.86) --
+	(113.93, 65.20) --
+	(115.32, 66.54) --
+	(116.71, 67.88) --
+	(118.10, 69.22) --
+	(119.49, 70.57) --
+	(120.88, 71.66) --
+	(122.27, 72.27) --
+	(123.66, 72.88) --
+	(125.06, 73.49) --
+	(126.45, 74.10) --
+	(127.84, 74.71) --
+	(129.23, 75.32) --
+	(130.62, 75.93) --
+	(132.01, 76.54) --
+	(133.40, 74.61) --
+	(134.79, 72.67) --
+	(136.18, 70.74) --
+	(137.57, 68.80) --
+	(138.96, 66.87) --
+	(140.35, 64.94) --
+	(141.74, 63.00) --
+	(143.13, 61.07) --
+	(144.52, 59.47) --
+	(145.91, 58.03) --
+	(147.30, 56.60) --
+	(148.69, 55.16) --
+	(150.08, 53.73) --
+	(151.47, 52.29) --
+	(152.86, 50.86) --
+	(154.25, 49.42) --
+	(155.64, 48.32) --
+	(157.03, 47.87) --
+	(158.42, 47.42) --
+	(159.81, 46.98) --
+	(161.20, 46.53) --
+	(162.59, 46.08) --
+	(163.98, 45.64) --
+	(165.37, 45.19) --
+	(166.76, 55.95);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 27.94) --
-	( 29.38, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.74, 27.94) --
+	( 27.74, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.69, 27.94) --
-	( 72.69, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.84, 27.94) --
+	( 62.84, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (116.01, 27.94) --
-	(116.01, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.94, 27.94) --
+	( 97.94, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (159.33, 27.94) --
-	(159.33, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.05, 27.94) --
+	(133.05, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (202.65, 27.94) --
-	(202.65, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (168.15, 27.94) --
+	(168.15, 30.69);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 29.38, 19.68) {0.00};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 27.74, 19.68) {0.00};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 72.69, 19.68) {0.25};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 62.84, 19.68) {0.25};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (116.01, 19.68) {0.50};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 97.94, 19.68) {0.50};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (159.33, 19.68) {0.75};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (133.05, 19.68) {0.75};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (202.65, 19.68) {1.00};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (168.15, 19.68) {1.00};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (116.01,  7.64) {$t$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 97.94,  7.64) {$t$};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 63.18) {$\Im(q)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 55.95) {$\Im(q)$};
 \end{scope}
 \end{tikzpicture}
