--- a/tex/graphics/3-srv-discrY.tex
+++ b/tex/graphics/3-srv-discrY.tex
@@ -1,264 +1,251 @@
-% Created by tikzDevice version 0.12.3.1 on 2021-12-06 10:56:49
+% Created by tikzDevice version 0.12.3.1 on 2021-12-15 14:08:42
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
-\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (216.81,101.18);
+\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (180.67, 86.72);
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (180.67, 86.72);
 \end{scope}
 \begin{scope}
-\path[clip] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[clip] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[fill=fillColor] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 41.03) --
-	(211.31, 41.03);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 38.73) --
+	(175.17, 38.73);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 55.80) --
-	(211.31, 55.80);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 50.21) --
+	(175.17, 50.21);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 70.57) --
-	(211.31, 70.57);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 61.70) --
+	(175.17, 61.70);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 85.34) --
-	(211.31, 85.34);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 73.18) --
+	(175.17, 73.18);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 51.04, 30.69) --
-	( 51.04, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 45.29, 30.69) --
+	( 45.29, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 94.35, 30.69) --
-	( 94.35, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 80.39, 30.69) --
+	( 80.39, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (137.67, 30.69) --
-	(137.67, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (115.50, 30.69) --
+	(115.50, 81.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (180.99, 30.69) --
-	(180.99, 95.68);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (150.60, 30.69) --
+	(150.60, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 33.64) --
-	(211.31, 33.64);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 32.98) --
+	(175.17, 32.98);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 48.41) --
-	(211.31, 48.41);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 44.47) --
+	(175.17, 44.47);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 63.18) --
-	(211.31, 63.18);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 55.95) --
+	(175.17, 55.95);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 77.95) --
-	(211.31, 77.95);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 67.44) --
+	(175.17, 67.44);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 92.72) --
-	(211.31, 92.72);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 78.93) --
+	(175.17, 78.93);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 30.69) --
-	( 29.38, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.74, 30.69) --
+	( 27.74, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.69, 30.69) --
-	( 72.69, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.84, 30.69) --
+	( 62.84, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (116.01, 30.69) --
-	(116.01, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.94, 30.69) --
+	( 97.94, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (159.33, 30.69) --
-	(159.33, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.05, 30.69) --
+	(133.05, 81.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (202.65, 30.69) --
-	(202.65, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (168.15, 30.69) --
+	(168.15, 81.22);
 \definecolor{drawColor}{RGB}{190,190,190}
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] ( 29.38, 67.76) --
-	( 31.11, 67.76) --
-	( 32.84, 67.76) --
-	( 34.58, 67.76) --
-	( 36.31, 67.76) --
-	( 38.04, 67.76) --
-	( 39.77, 67.76) --
-	( 41.51, 67.76) --
-	( 43.24, 67.76) --
-	( 44.97, 70.98) --
-	( 46.70, 70.98) --
-	( 48.44, 70.98) --
-	( 50.17, 70.98) --
-	( 51.90, 70.98) --
-	( 53.64, 70.98) --
-	( 55.37, 70.98) --
-	( 57.10, 70.98) --
-	( 58.83, 70.98) --
-	( 60.57, 83.43) --
-	( 62.30, 83.43) --
-	( 64.03, 83.43) --
-	( 65.76, 83.43) --
-	( 67.50, 83.43) --
-	( 69.23, 83.43) --
-	( 70.96, 83.43) --
-	( 72.69, 83.43) --
-	( 74.43, 83.43) --
-	( 76.16, 76.31) --
-	( 77.89, 76.31) --
-	( 79.63, 76.31) --
-	( 81.36, 76.31) --
-	( 83.09, 76.31) --
-	( 84.82, 76.31) --
-	( 86.56, 66.16) --
-	( 88.29, 66.16) --
-	( 90.02, 66.16) --
-	( 91.75, 66.16) --
-	( 93.49, 66.16) --
-	( 95.22, 66.16) --
-	( 96.95, 66.16) --
-	( 98.69, 66.16) --
-	(100.42, 64.21) --
-	(102.15, 64.21) --
-	(103.88, 64.21) --
-	(105.62, 64.21) --
-	(107.35, 64.21) --
-	(109.08, 64.21) --
-	(110.81, 64.21) --
-	(112.55, 64.21) --
-	(114.28, 64.21) --
-	(116.01, 64.21) --
-	(117.74, 64.21) --
-	(119.48, 64.21) --
-	(121.21, 64.21) --
-	(122.94, 70.98) --
-	(124.68, 70.98) --
-	(126.41, 70.98) --
-	(128.14, 70.98) --
-	(129.87, 70.98) --
-	(131.61, 70.98) --
-	(133.34, 70.98) --
-	(135.07, 70.98) --
-	(136.80, 70.98) --
-	(138.54, 70.98) --
-	(140.27, 80.12) --
-	(142.00, 80.12) --
-	(143.74, 80.12) --
-	(145.47, 80.12) --
-	(147.20, 80.12) --
-	(148.93, 80.12) --
-	(150.67, 84.44) --
-	(152.40, 84.44) --
-	(154.13, 84.44) --
-	(155.86, 84.44) --
-	(157.60, 84.44) --
-	(159.33, 84.44) --
-	(161.06, 76.31) --
-	(162.79, 76.31) --
-	(164.53, 76.31) --
-	(166.26, 76.31) --
-	(167.99, 76.31) --
-	(169.73, 76.31) --
-	(171.46, 69.78) --
-	(173.19, 69.78) --
-	(174.92, 69.78) --
-	(176.66, 69.78) --
-	(178.39, 69.78) --
-	(180.12, 69.78) --
-	(181.85, 69.78) --
-	(183.59, 69.78) --
-	(185.32, 69.78) --
-	(187.05, 69.78) --
-	(188.79, 52.31) --
-	(190.52, 52.31) --
-	(192.25, 52.31) --
-	(193.98, 52.31) --
-	(195.72, 52.31) --
-	(197.45, 52.31) --
-	(199.18, 52.31) --
-	(200.91, 52.31) --
-	(202.65, 52.31);
+\path[draw=drawColor,line width= 2.3pt,line join=round] ( 27.74, 59.51) --
+	( 29.14, 59.51) --
+	( 30.54, 59.51) --
+	( 31.95, 59.51) --
+	( 33.35, 59.51) --
+	( 34.76, 59.51) --
+	( 36.16, 59.51) --
+	( 37.56, 59.51) --
+	( 38.97, 59.51) --
+	( 40.37, 62.02) --
+	( 41.78, 62.02) --
+	( 43.18, 62.02) --
+	( 44.59, 62.02) --
+	( 45.99, 62.02) --
+	( 47.39, 62.02) --
+	( 48.80, 62.02) --
+	( 50.20, 62.02) --
+	( 51.61, 62.02) --
+	( 53.01, 71.70) --
+	( 54.41, 71.70) --
+	( 55.82, 71.70) --
+	( 57.22, 71.70) --
+	( 58.63, 71.70) --
+	( 60.03, 71.70) --
+	( 61.44, 71.70) --
+	( 62.84, 71.70) --
+	( 64.24, 71.70) --
+	( 65.65, 66.17) --
+	( 67.05, 66.17) --
+	( 68.46, 66.17) --
+	( 69.86, 66.17) --
+	( 71.27, 66.17) --
+	( 72.67, 66.17) --
+	( 74.07, 58.27) --
+	( 75.48, 58.27) --
+	( 76.88, 58.27) --
+	( 78.29, 58.27) --
+	( 79.69, 58.27) --
+	( 81.09, 58.27) --
+	( 82.50, 58.27) --
+	( 83.90, 58.27) --
+	( 85.31, 56.75) --
+	( 86.71, 56.75) --
+	( 88.12, 56.75) --
+	( 89.52, 56.75) --
+	( 90.92, 56.75) --
+	( 92.33, 56.75) --
+	( 93.73, 56.75) --
+	( 95.14, 56.75) --
+	( 96.54, 56.75) --
+	( 97.94, 56.75) --
+	( 99.35, 56.75) --
+	(100.75, 56.75) --
+	(102.16, 56.75) --
+	(103.56, 62.02) --
+	(104.97, 62.02) --
+	(106.37, 62.02) --
+	(107.77, 62.02) --
+	(109.18, 62.02) --
+	(110.58, 62.02) --
+	(111.99, 62.02) --
+	(113.39, 62.02) --
+	(114.79, 62.02) --
+	(116.20, 62.02) --
+	(117.60, 69.12) --
+	(119.01, 69.12) --
+	(120.41, 69.12) --
+	(121.82, 69.12) --
+	(123.22, 69.12) --
+	(124.62, 69.12) --
+	(126.03, 72.49) --
+	(127.43, 72.49) --
+	(128.84, 72.49) --
+	(130.24, 72.49) --
+	(131.65, 72.49) --
+	(133.05, 72.49) --
+	(134.45, 66.17) --
+	(135.86, 66.17) --
+	(137.26, 66.17) --
+	(138.67, 66.17) --
+	(140.07, 66.17) --
+	(141.47, 66.17) --
+	(142.88, 61.08) --
+	(144.28, 61.08) --
+	(145.69, 61.08) --
+	(147.09, 61.08) --
+	(148.50, 61.08) --
+	(149.90, 61.08) --
+	(151.30, 61.08) --
+	(152.71, 61.08) --
+	(154.11, 61.08) --
+	(155.52, 61.08) --
+	(156.92, 47.50) --
+	(158.32, 47.50) --
+	(159.73, 47.50) --
+	(161.13, 47.50) --
+	(162.54, 47.50) --
+	(163.94, 47.50) --
+	(165.35, 47.50) --
+	(166.75, 47.50) --
+	(168.15, 47.50);
 \definecolor{drawColor}{RGB}{0,0,0}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] ( 36.57, 67.76) --
-	( 51.90, 70.98) --
-	( 67.99, 83.43) --
-	( 81.02, 76.31) --
-	( 92.93, 66.16) --
-	(110.71, 64.21) --
-	(130.82, 70.98) --
-	(144.53, 80.12) --
-	(154.83, 84.44) --
-	(165.67, 76.31) --
-	(179.51, 69.78) --
-	(195.45, 52.31);
 \definecolor{fillColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 36.57, 67.76) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 33.56, 59.51) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 51.90, 70.98) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 45.99, 62.02) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 67.99, 83.43) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 59.02, 71.70) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 81.02, 76.31) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 69.58, 66.17) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 92.93, 66.16) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 79.24, 58.27) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (110.71, 64.21) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 93.65, 56.75) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (130.82, 70.98) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (109.95, 62.02) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (144.53, 80.12) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (121.05, 69.12) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (154.83, 84.44) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (129.40, 72.49) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (165.67, 76.31) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (138.19, 66.17) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (179.51, 69.78) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (149.40, 61.08) circle (  1.43);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (195.45, 52.31) circle (  1.43);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (162.32, 47.50) circle (  1.43);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (211.31, 95.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (175.17, 81.22);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 27.94) --
-	( 29.38, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.74, 27.94) --
+	( 27.74, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.69, 27.94) --
-	( 72.69, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.84, 27.94) --
+	( 62.84, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (116.01, 27.94) --
-	(116.01, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.94, 27.94) --
+	( 97.94, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (159.33, 27.94) --
-	(159.33, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.05, 27.94) --
+	(133.05, 30.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (202.65, 27.94) --
-	(202.65, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (168.15, 27.94) --
+	(168.15, 30.69);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 29.38, 19.68) {0.00};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 27.74, 19.68) {0.00};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 72.69, 19.68) {0.25};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 62.84, 19.68) {0.25};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (116.01, 19.68) {0.50};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 97.94, 19.68) {0.50};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (159.33, 19.68) {0.75};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (133.05, 19.68) {0.75};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (202.65, 19.68) {1.00};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (168.15, 19.68) {1.00};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (116.01,  7.64) {$t$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 97.94,  7.64) {$t$};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
+\path[clip] (  0.00,  0.00) rectangle (180.67, 86.72);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 63.18) {$\Im(q)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 55.95) {$\Im(q)$};
 \end{scope}
 \end{tikzpicture}
